tests/ui/enum_glob_use.stderr
error: don't use glob imports for enum variants
 --> $DIR/enum_glob_use.rs:6:1
  |
6 | use std::cmp::Ordering::*;
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: #[deny(enum_glob_use)] implied by #[deny(clippy_pedantic)]
note: lint level defined here
 --> $DIR/enum_glob_use.rs:3:17
  |
3 | #![deny(clippy, clippy_pedantic)]
  |                 ^^^^^^^^^^^^^^^

error: don't use glob imports for enum variants
  --> $DIR/enum_glob_use.rs:12:1
   |
12 | use self::Enum::*;
   | ^^^^^^^^^^^^^^^^^^
   |
   = note: #[deny(enum_glob_use)] implied by #[deny(clippy_pedantic)]

error: aborting due to 2 previous errors

